--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/platform-express": "^9.3.9",
     "bcrypt": "^5.1.0",
+    "cross-env": "^7.0.3",
     "mongodb": "^4.13.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
