--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/platform-express": "^9.3.9",
+    "@nestjs/serve-static": "^3.0.1",
     "bcrypt": "^5.1.0",
     "cross-env": "^7.0.3",
     "mongodb": "^4.13.0",
